--- a/templates/default/storm.yaml.erb
+++ b/templates/default/storm.yaml.erb
@@ -45,7 +45,7 @@ zmq.linger.millis: <%= node[:storm][:zmq][:longer_millis] %>
 
 
 ### nimbus.* configs are for the master
-nimbus.host: "<%= @nimbus[:fqdn] %>"
+nimbus.host: "<%= node[:storm][:nimbus][:host] %>"
 nimbus.thrift.port: <%= node[:storm][:nimbus][:thrift_port] %>
 nimbus.childopts: "<%= node[:storm][:nimbus][:childopts] %>"
 nimbus.task.timeout.secs: <%= node[:storm][:nimbus][:task_timeout_secs] %>
