--- a/templates/default/sv-nimbus-run.erb
+++ b/templates/default/sv-nimbus-run.erb
@@ -1,4 +1,4 @@
 #!/bin/sh
-ulimit -n 20480
+ulimit -n <%= node['storm']['nimbus']['fdlimit'] %>
 exec 2>&1
 exec chpst -u <%=@options[:user]%> <%=@options[:install_dir]%>/bin/nimbus-control start
